# for3s

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  TESTING.md  docker-compose.yml  install.sh  pyproject.toml  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  tester_feedback.md
.github/workflows/: ci.yml
docker/: Dockerfile.agent  Dockerfile.postgres  Dockerfile.workspace
docker/grafana/dashboards/: for3s_os.json  provider.yml
docker/grafana/datasources/: for3s.yml
docker/postgres/: init-extensions.sql
docker/render/: Dockerfile  render.py  render_http.py
scripts/: pilar3_gate.py
src/for3s_os/: __init__.py
tests/: test_bucket.py  test_concurrency.py  test_config.py  test_gate.py  test_h1.py  test_h2.py  test_h2_integration.py  test_h3.py  test_h4.py  test_pulido_mvp.py  test_smoke.py  test_tg_handlers.py
