[project]
name = "for3s-os"
version = "0.0.1"
description = "For3s OS — agente-cerebro multi-tenant, self-hosted (monorepo)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "for3s-core",
    "mcp>=1.27.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty",
    "pytest>=8",
    "pytest-asyncio",
]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
for3s-core = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.7"]
build-backend = "uv_build"
